# gtools

./: .gitignore  .gitmodules  DOCS  README  README.md  compile_proto  func.c  gui.py  imgui.ini  main.py  pyproject.toml  pyrightconfig.json  renderer.py  requirements.txt  s  s.cmd  script.py  test.py
docs/: 01_setup  02_packet  03_types  04_login  05_registry  06_dialog
extension/: analyze_dialog.py  analyze_particle.py  auto_break.py  auto_fish.py  buy_valen.py  fake_world.py  template.py  utils.py  wsrelay.py
gtools/: __init__.py  flags.py  setting.py
migration/: 001_add_rid.py
resources/: unravel.mid
scripts/: analyze.py  bake.py  clean_test.py  cli.py  compile_cmod.py  compile_proto.py  ctopy.py  dropped.py  find_texture.py  item.py  item_to_sql.py  klv.py  login_val.py  mine.py  offset_bruteforce.py  paint.py  parse.py  recipe.py  registry_val.py  render_player.py  rid.py  rid_dec.py  search.py  seed.py  struct_debug.py  test.py  texture.py  tileset.py  utils.py  world.py
shaders/: gui_box.frag  gui_box.vert  gui_box3d.vert  midi_grid.frag  midi_grid.vert  midi_note.frag  midi_note.vert  object.frag  object.vert  object3d.frag  object3d.vert  object_shadow.frag  object_shadow.vert  object_shadow3d.vert  seed.frag  seed.vert  seed3d.vert  solid.frag  solid.vert  solid3d.vert  text.frag  text.vert  text3d.vert  world.frag  world.vert  world3d.frag  world3d.vert
tests/: __init__.py  test_ack_queue.py  test_buffer.py  test_extension.py  test_highres_sleep.py  test_packet.py  test_packet_scheduler.py  test_proxy_and_broker_push.py  test_signal.py  (+6 more)
(+488 files in other folders)
