[project]
name = "gtools"
version = "0.0.1"
description = "general tools related to the game growtopia"
readme = "README"
dependencies = [
    "cbor2>=5.7.1",
    "coverage>=7.13.0",
    "fix-protobuf-imports>=0.1.7",
    "pillow>=12.0.0",
    "protobuf>=6.33.2",
    "pyglm>=2.8.3",
    "pytest>=9.0.2",
    "pytest-forked>=1.6.0",
    "rapidfuzz>=3.14.3",
    "xxhash>=3.6.0",
    "zmq>=0.0.0",
]

[tools.pyright]
include = "gtools"

[tool.black]
line-length = 180
